[package]
name = "distributed-ratelimit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-dynamodb = "1"
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
serde = { version = "1", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
thiserror = "1.0.56"
